tests/script_runtime_errors/meta_and_use/error.txt
Error: 
    1 | use std::array;
    2 | 
    3 | let $ = "snot";
      |     ^^^^^^^^^^ You are trying to assign to a value that isn't valid